# nanobot-cloud

./: .env.example  .gitignore  .gitignore_new  CUSTOMIZATION.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_STRUCTURE.md  FASE_3_CHECKLIST.md  FASE_3_COMPLETE_SUMMARY.md  FASE_3_DEPLOYMENT.md  FASE_3_STATUS.md  FINAL_STATUS.md  NEXT_STEPS.md  PHASE_1_COMPLETE.md  PHASE_1_SUMMARY.md  PHASE_2_COMPLETE.md  QUICK_DEPLOY.md  README.md  RENDER_SETUP_GUIDE.md  START_HERE.md  pyproject.toml
app/: __init__.py  main.py
app/cloud/: __init__.py  backup_service.py  dashboard.py  mcp_server.py  providers.py  sessions.py  telegram_bot.py
app/config/: __init__.py  schema.py
app/core/: __init__.py  context.py  loop.py  memory.py  tools.py
app/utils/: logger.py
config/: channels.yml  providers.yml  telegram.yml
infrastructure/: .dockerignore  Dockerfile  docker-compose.yml  render.yaml
old/: MIGRATION_NOTE.md  start-bridge.bat  start-gateway.bat  start-nanobot.bat
scripts/: backup_s3.py  deploy_render.sh  init_cloud.sh  verify_setup.py
tests/: __init__.py  test_agent_loop.py  test_config.py  test_main.py  test_phase2.py  test_providers.py  test_tools.py
upload-repo/: IMPLEMENTATION_GUIDE.md  phase2_summary.txt
web/: app.js  index.html
workspace/: AGENTS.md  MEMORY.md  SOUL.md  USER.md
workspace/memory/: MEMORY.md
